fix: tableHeader text alignment

--- a/packages/core/src/editor/editor.css
+++ b/packages/core/src/editor/editor.css
@@ -156,6 +156,7 @@ Tippy popups that are appended to document.body directly
 
 .bn-editor [data-content-type="table"] th {
   font-weight: bold;
+  text-align: left;
 }
 
 /* tiptap uses colwidth instead of data-colwidth, se we need to adjust this style from prosemirror-tables */
